# simbind-cli

./: .gitignore  .gitmodules  Dockerfile  README.md  license_info.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build-docker.yaml  publish-to-test-pypi.yml  publish.yaml  tests.yaml
examples/: LICENSE  README.md
examples/AntiWindupPidController/: AntiWindupPidController.slx  antiwindup_controller-5.0-py3-none-linux_x86_64.whl  plot.py
examples/ClimateController/: ClimateController.slx  climate_controller-1.0-py3-none-linux_x86_64.whl
examples/LongitudinalFlightControl/: LongitudinalFlightControl2023a.slx  flight_controller-6.0-py3-none-linux_x86_64.whl  plot.py
examples/SingleLoopFeedback/: SingleLoopFeedback2023a.slx  plot.py  single_loop_feedback-10.0-py3-none-linux_x86_64.whl
examples/Transmission/: Transmission.slx  transmission-5.0-py3-none-linux_x86_64.whl
simbind/: __init__.py  __main__.py
simbind_cli/: __main__.py
tests/: __init__.py  conftest.py
tests/arguments/: exporter_out_dir_test.py  license_test.py  models_out_dir_test.py  package_name_test.py  slx_path_test.py  solver_test.py  step_size_test.py  wheel_out_dir_test.py
tests/unit/: conftest.py
tests/unit/arguments/: package_name_test.py  slx_path_test.py
