[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simbind"
description = "Generate Python wheel package from Simulink model!"
authors = [{name = "SWAG Engineering UG", email = "contact@swag-engineering.io"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9, <3.12"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = { file = ["simbind/architect/requirements.txt", "simbind/exporter/requirements.txt"] }
version = { file = ["VERSION"] }

[project.scripts]
simbind = "simbind.__main__:main"

[tool.setuptools.packages.find]
include = [
    "simbind",
    "simbind.architect.*",
    "simbind.exporter.*"
]

[tool.setuptools.package-data]
"*" = ["*.j2", "*.m"]

[tool.distutils.bdist_wheel]
plat-name = "manylinux2010_x86_64"